theme/style/main.css
html {
    overflow-y: scroll;
}
body {
    background-color: white;
    margin: 0 auto;
    padding:0;
    width: 700px;
    font-family:Droid Sans, sans-serif;
    font-size:12pt;
    color:#222;
}
header {
    margin: 20px 0;
    position:relative;
    text-decoration: none;
    text-align: center;
    font-family: Reenie Beanie, sans-serif;
    font-size:26pt;
    font-weight:bold;
}
header::after { /* the horizontal line in the header */
    content:"";
    display:block;
    border-bottom:1px solid #888;
    position:absolute;
    top:50%;
    width:100%;
    z-index:-1;
}
header a { 
    text-decoration:none;
    background-color:#fff;
    display:inline-block;
    padding:0px 12px 0 10px;
    position:relative;
}
/* the animation that pulls back the horizontal header line
 * do this via absolute psuedoelements instead of padding animation
 * because the padding change / text-align:center was causing text jitter
 */
header a::after,
header a::before {
    content:"";
    display:block;
    background-color:#FFF;
    width:0px;
    height:50%;
    position:absolute;
    top:25%;
    transition: width 0.2s ease;
}
header a:hover::after,
header a:hover::before {
    width:20px;
}
header a::after {
    left:100%;
}
header a::before {
    right:100%;
}
a {
    color:#F56017;
    text-decoration:none;
    transition:color 0.2s ease;
}
a:hover {
    color:#D15214;
}
.first-name {
    color:#555;
}
.last-name {
    color:#F56017;
}
article {
    text-align: justify;
    line-height:1.5em;
}
article h1 {
    margin:0 0 32px 0;
    color:#F56017;
    font-weight:normal;
    font-size:20pt;
    line-height:1em;
}
article h2 {
    font-weight:normal;
    font-size:16pt;
}
article h3 {
    font-weight:normal;
    font-size:14pt;
}
article time {
    float:right;
    color:#888;
}
.util-links {
    clear:both;
    text-align: center;
    margin:20px 0;
}
.util-links a {
    color:#888;
    display:inline-block;
    padding: 5px 10px;
    text-align:center;
    font-size:10pt;
}
.util-links a:hover {
    color:#666;
}
.highlight pre {
    font-family: Inconsolata, monospace;
    line-height:1.2em;
}
tt, code, kbd, samp {
    font-family:Inconsolata, monospace;
}
.highlight {
    padding-left: 1em;
    margin-bottom: 10px;
    margin-top: 10px;
    overflow: auto;
    border-left: 5px solid #F56017;
}
.tags {
    margin-top: 20px;
    text-align: center;
}
.pager {
    overflow:auto;
    margin: 20px 0;
}
.prev { float: right }
.next { float: left }
.search-box {
    display:block;
    margin: 20px auto 28px auto;
    width:220px;
    padding:5px;
    border: 1px solid #999;
    transition: border 0.2s ease-in-out;
    border-radius:0;
}
.search-box:focus {
    outline:none;
    border: 1px solid #F56017;
}
.entry-list {
    margin:0;
    padding:0;
    list-style:none;
}
.entry-list li {
    display:flex;
    justify-content: space-between;
    padding:5px 0;
}
.entry-list .date {
    color:#888;
}

.entry-list li:hover .date {
    color:#666;
}
.entry-list li:hover .title {
    color:#D15214;
}

@media (max-width:820px) {
    nav { 
        display:none;
    }
    body {
        width:98%;
        padding:0 1%;
    }
    article {
        text-align:left;
    }
    article h1 {
        width:100%;
        text-align:center;
    }
    article time {
        width:100%;
        text-align:center;
    }
}
@media (max-width:500px) {
    .entry-list .date {
        display:none;
    }
    .entry-list a {
        display:inline-block;
        padding:5px 0;
    }
}
/* navigation */

nav ul, nav li {
    margin:0;
    padding:0;
    list-style-type:none;
}
nav {
    position:fixed;
    top:0;
    left:0;
    margin:10px;
}
nav a {
    display:inline-block;
    text-align:center;
    border: 1px solid #fff;
    font-size:20px;
    transition:none;
    vertical-align:middle;
    padding:10px;
    color:#ccc;
}
nav .label {
    line-height:40px;
    display:inline-block;
    padding-left:10px;
    width:0;
    overflow:hidden;
    background-color:#fff;
    color:#888;
    transition:none;
    vertical-align: middle;
}
nav li:hover .label {
    width:90px;
    transition:width 0.2s linear;
}
nav:hover a {
    background-color:#F7F7F7;
    border: 1px solid #eee;
}
nav a:hover {
    background-color:#F56017;
    color:#fff;
}

.comment {
    margin-top:40px;
    margin-bottom:40px;
    border: 1px solid #ddd;
    font-size: 0.9em;
    box-shadow: 4px 4px 2px #ddd
}
.comment:target {
    border: 1px solid #F56017;
}
.comment-avatar {
    width:40px;
    height:40px;
    padding-right: 15px;
}
.comment-metadata {
    height: 40px;
    display: flex;
    align-items: center;
}
.comment-content {
    padding: 0px 20px 0px 55px;
}
.comment-ongithub {
    height:80px;
    line-height: 80px;
    text-align: center;
}

/* styles for use in blog posts */
.align-center {
    text-align:center;
}
img.align-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

